fixed location alignment

--- a/style.css
+++ b/style.css
@@ -75,22 +75,40 @@ body {
 /* Location Specific {
 .nav-location {
 display: flex;
-flex-direction: column;
-justify-content: center;
+align-items: flex-end;
+padding: 5px 2px;
+padding-bottom: 6px;
 }
+
 
 .location-icon {
 font-size: 15px;
-margin-right: 4px;
+color: #ffffff;
+margin-right: 8px;
+padding-bottom: 2px;
+
 }
 
-.location-bottom {
+.location-text{
 display: flex;
-align-items: center;
+flex-direction: column;
 }
 
-.location-top-text {
-padding-left: 17px;
+.location-text p {
+margin: 0;
+}
+
+.text-small {
+font-size: 12px;
+color: #cccccc;
+line-height: 14px;
+}
+
+.text-bold {
+font-size: 14px;
+font-weight: bold;
+color: #ffffff;
+line-height: 15px;
 }
 
 
